bounced this off of slawomir, will need at least one "really" hard question... plus he had some other great feedback.

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -26,9 +26,21 @@
   \Huge
   Written Exam\\
   \Large
-  Monday, October 24, 2011\\[2\baselineskip]
+  Monday, October 24, 2011\\
+  15h30 -- 19h30, room K{\aa}ren\\[2\baselineskip]
   Examiner: Roland Philippsen (phone 7249)
 \end{minipage}
+
+\vfill
+
+\noindent
+\begin{center}
+\fbox{
+  \begin{minipage}{0.8\columnwidth}
+    \textbf{Student Name:}\\[3\baselineskip]
+  \end{minipage}
+}
+\end{center}
 
 \vfill
 
@@ -292,5 +304,22 @@ Answer the following questions:
   Pick one of the problem solving techniques and apply them to solve your friend's problem.
   You can write your solution as Java code or as pseudo-code.
 \end{enumerate}
+
+\clearpage
+
+\question
+\label{q:sequence-alignment}
+
+\emph{something with sequence alignment\ldots}
+
+\question
+\label{q:graph-search}
+
+\emph{something with dfs, bfs, and dijkstra, maybe throw in an adjacency matrix for good measure\ldots}
+
+\question
+\label{q:tree-exercises}
+
+\emph{various little things about trees and search trees, e.g.\ draw diagram of binary search tree after a series of insertions and deletion, list the node visitation order for the various traversal methods, find formula for max number of nodes in a ternary tree (proof by induction)\ldots}
 
 \end{document}
