first round of feedback from slawomir. now on to the last two questions...

--- a/exam/answer-sketches.tex
+++ b/exam/answer-sketches.tex
@@ -1,6 +1,8 @@
 \documentclass[a4paper]{article}
 
-\usepackage{amssymb,amsmath}
+\usepackage[pdftex]{graphicx}
+\usepackage[margin=3cm]{geometry}
+\usepackage{verbatim,moreverb,amssymb,amsmath}
 
 \begin{document}
 
@@ -97,5 +99,7 @@ n & label & value \\
 7  & C & 2* 1 - 0 + 1 = 3 \\
 \hline
 \end{tabular}
+
+\includegraphics{answer-3-2-bstree.pdf}
 
 \end{document}
