finalized exam after one last feedback from slawomir... decided to leave out the implementation of bstree.remove, the dag detection is hard enough.

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -71,9 +71,9 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
   \textbf{Write clearly} and draw clear diagrams.
   If you need to correct a mistake, then cleanly cross out the wrong answer and clearly indicate where the correction can be found.
 \item
-  If you use separate sheets for your answers, \textbf{indicate the question number} for each of your answers.
+  \textbf{Indicate the question number} for each of your answers.
   If a question has sub-questions, indicate the sub-question number after the main question number, separated by a dot.
-  For example, question 3 has 3 subquestions, and their answers should be numbered 3.1, 3.2, and 3.3.
+  For example, question 3 has 4 sub-questions, and their answers should be numbered 3.1, 3.2, 3.3, and 3.4.
 \end{itemize}
 
 
@@ -88,7 +88,7 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
 \question\label{q:container-structures-a}
 
 The following four figures show four examples of data structures.
-They are labelled with the letters \textbf{(A)}, \textbf{(B)}, \textbf{(C)}, and \textbf{(D)}.
+They are labeled with the letters \textbf{(A)}, \textbf{(B)}, \textbf{(C)}, and \textbf{(D)}.
 The table below them lists names of data structure types.
 For each type listed in the table, determine whether it is represented by one of the figures.
 If there is a figure for a given type, write the corresponding letter into the second column of the table.
@@ -154,7 +154,7 @@ Make each diagram as similar as possible to one of the figures from question~\re
 
 The following Java code implements two data structures called \texttt{ContainerOne} and \texttt{ContainerTwo}.
 Answer the following questions.
-You can write the answers as annotations on the source code, or on a separate sheet of paper if you need more space.
+You can write the short answers as annotations on the source code, and use a separate sheet of paper for the ones that require more space.
 
 \begin{enumerate}
 \item
@@ -247,7 +247,7 @@ Answer the following questions:
 
 The number sequence $\{G_n\}$ is defined for all natural numbers $n>0$ by the following recursion.
 In order to compute $G_n$, one of your friends implemented the \texttt{gRec} Java method shown in the box below the equation.
-There are three \texttt{return} statements in that method, and they are labelled with the letters \textbf{(A)}, \textbf{(B)}, and \textbf{(C)}.
+There are three \texttt{return} statements in that method, and they are labeled with the letters \textbf{(A)}, \textbf{(B)}, and \textbf{(C)}.
 
 \begin{equation*}
   G_n =
@@ -294,14 +294,14 @@ Answer the following questions:
   Write it down as a table that follows the same format as the table above.
 \item
   Your friend notices that his implementation is really slow for \texttt{n} larger than 20 or so:
-  with \texttt{n=20} it takes 0.3 seconds, but with \texttt{n=40} it takes almost 1 minute!
+  with \texttt{n=20} it takes 0.3 seconds, but with \texttt{n=40} it takes almost a minute!
   Explain why this happens.
   If you can draw a diagram to illustrate the root cause, even better!
 \item
   There are two problem solving techniques which can avoid the rapid growth of execution time in this case.
   Briefly explain each technique \emph{(you should not need more than two or three  sentences for each)}.
 \item
-  Apply both of these two problem solving techniques to solve your friend's problem.
+  Apply both of these problem solving techniques to solve your friend's problem.
   Write separate code segments for each of them.
   You can use Java syntax or pseudo-code, as long as it is clear what is done in which order.
 \end{enumerate}
@@ -336,7 +336,7 @@ Answer the following questions:
 \item
   Prove the theorem.
 \item
-  Develop and describe an algorithm to detect whether a given directed graph has a cycle.\\
+  Develop and describe an algorithm to detect whether a given directed graph has a cycle, based on the above theorem.\\
   \textbf{Hints:}
   \begin{itemize}
   \item
@@ -348,7 +348,7 @@ Answer the following questions:
     This means that $V$ cannot be on a cycle.
     In the above example, $C$ is such a vertex.
   \item
-    If we remove an edge $(V,W)$, then the indegree of $W$ decreases by one.
+    If we remove an edge $(V,W)$, then the indegree of $W$ is decreased by one.
     If $V$ is \emph{not} on a cycle, and the removal of $(V,W)$ makes the indegree of $W$ drop to zero, then $W$ also cannot be on a cycle.
   \end{itemize}
 \item
@@ -373,12 +373,6 @@ Answer the following questions:
     \end{minipage}}
 \end{center}
 
-\clearpage
 
-\question
-\label{q:tree-exercises}
-
-\emph{give an example bstree, let them remove a node from the middle
-  of it, let them write pseudo code for removing any node\ldots}
 
 \end{document}
