missing "the" (thanks Tim Tack)

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -202,7 +202,7 @@ However, they employ different strategies:
     Then, he picks the next card from the unsorted pile, and places it either underneath or on top of the card on the left depending on whether the name on the new card comes before or after the name on the old card.
   \item
     He then repeatedly does the following, until the unsorted pile has vanished:
-    he picks one card after another from the right, scans for its place in sorted pile, and inserts it there.
+    he picks one card after another from the right, scans for its place in the sorted pile, and inserts it there.
   \end{itemize}
 \item[The CTO]
   does it differently:
