rename and tweak to make Q3 code exactly match the exam

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -177,7 +177,7 @@ You can write the short answers as annotations on the source code, and use a sep
 \noindent
 \begin{minipage}{0.95\columnwidth}
   \small
-  \verbatimtabinput{BSTreeSnips.java}
+  \verbatimtabinput{Q3.java}
 \end{minipage}
 
 \clearpage
