--- a/exams/2012-01-02/itads-exam-2012-01-02.tex
+++ b/exams/2012-01-02/itads-exam-2012-01-02.tex
@@ -126,11 +126,11 @@ Then draw a small diagram to illustrate the chosen data structure.
 
 \question
 
-Determine the Big-Oh running time complexity for each of the methods whose name begins with \texttt{question\_} in the ceode below.
+Determine the Big-Oh running time complexity for each of the methods whose name begins with \texttt{question\_} in the code below.
 
 \noindent
 \begin{minipage}{0.95\columnwidth}
-  \small
+  \footnotesize
   \verbatimtabinput{Q2.java}
 \end{minipage}
 
