--- a/exams/2012-01-02/itads-exam-2012-01-02.tex
+++ b/exams/2012-01-02/itads-exam-2012-01-02.tex
@@ -204,7 +204,7 @@ A \emph{spanning tree} is a tree which is embedded in a graph in such a way that
 (1) all the vertices of the graph appear in the tree, and
 (2) all the edges of the tree are also edges in the graph.
 In other words, a spanning tree is composed of all the vertices and some of the edges of the graph.
-It is possible to compute the spanning tree by tracing the execution of depth-first search (DFS):
+It is possible to compute a spanning tree by tracing the execution of depth-first search (DFS):
 whenever a non-visited vertex is encountered, the edge connecting to it is added to the spanning tree.
 This technique also works for breadth-first search (BFS).
 
